# regenerator2000

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SKILLS.md  a.out  architecture.md  build.rs  co1.regen2000proj  co1_acme.asm  co1_tass.asm  mama.asm  mkdocs.yml  requirements.md  requirements.txt  test_output.asm
.antigravity/: GEMINI.md
.github/: pull_request_template.md
crates/regenerator-tui/: Cargo.toml
crates/regenerator-tui/src/: events.rs  lib.rs  ui_state.rs  utils.rs
crates/regenerator-tui/src/events/: input.rs
crates/regenerator-tui/src/ui/: dialog_confirmation.rs  dialog_d64_picker.rs  dialog_document_settings.rs  dialog_export_as.rs  dialog_find_references.rs  dialog_origin.rs  dialog_save_as.rs  dialog_watchpoint_address.rs  graphics_common.rs  statusbar.rs  view_bitmap.rs  view_disassembly.rs
crates/regenerator-tui/src/ui/menu/: menu_action.rs  mod.rs
crates/regenerator2000-core/: Cargo.toml
crates/regenerator2000-core/assets/enums/: enum-petscii_shifted.toml  enum-vic_colors.toml  enum-vic_ii_colors.toml
crates/regenerator2000-core/assets/systems/: system-NES.toml  system-apple_ii.json  system-apple_ii.toml  system-atari_8bit.toml  system-bbc_micro.toml  system-commodore_128.json  system-commodore_128.toml  system-commodore_1541.json  system-commodore_1541.toml  system-commodore_64.json  system-commodore_64.toml  system-commodore_pet_2.0.json  system-commodore_pet_2.0.toml  system-commodore_pet_4.0.json  system-commodore_pet_4.0.toml  system-commodore_plus4.json  system-commodore_plus4.toml  system-commodore_vic-20.json  system-commodore_vic-20.toml  system-oric_1.0.json  system-oric_1.0.toml  system-oric_1.1.toml
crates/regenerator2000-core/src/: analyzer.rs  assets.rs  commands.rs  config.rs  core.rs  disassembler.rs  error.rs  event.rs  exporter.rs  lib.rs  navigation.rs  packer_signatures.rs  parser.rs  unpacker.rs  utils.rs  view_state.rs
crates/regenerator2000-core/src/action_handlers/: debug_handler.rs  disassembly_handler.rs  file_handler.rs  mod.rs  navigation_handler.rs
crates/regenerator2000-core/src/disassembler/: context.rs  data_blocks.rs  formatter.rs  formatter_64tass.rs  formatter_acme.rs  formatter_ca65.rs  formatter_kickasm.rs  handlers.rs  mod.rs  pipeline.rs  symbols.rs
crates/regenerator2000-core/src/exporter/: asm.rs  html.rs  mod.rs  verify.rs
crates/regenerator2000-core/src/mcp/: handler.rs  http.rs  stdio.rs
crates/regenerator2000-core/src/packers/: action_replay.rs  alz64.rs  antiram.rs  byteboozer.rs  card_cruncher.rs  ccs.rs  cruel_cruncher.rs  dali.rs  eagle.rs  eca.rs  exomizer.rs  final_cartridge.rs  mc_cracken.rs  mod.rs  pucrunch.rs  simple.rs  super_cruncher.rs  tbc.rs  time_cruncher.rs  tiny_crunch.rs  triad.rs  tscrunch.rs  turbo_cruncher.rs
crates/regenerator2000-core/src/parser/: basic.rs  crt.rs  d64.rs  dis65.rs  prg.rs  t64.rs  vice_lbl.rs  vice_vsf.rs
crates/regenerator2000-core/src/state/: actions.rs  annotations.rs  app_state.rs  blocks.rs  disassembly.rs  file_io.rs  mod.rs  project.rs  search.rs  settings.rs  types.rs
crates/regenerator2000-core/src/unpacker/: bus.rs  cia.rs  detector.rs  engine.rs  mod.rs
crates/regenerator2000-core/src/vice/: c64_hardware.rs  client.rs  mod.rs  protocol.rs  state.rs
crates/regenerator2000-tui/: Cargo.toml
crates/regenerator2000-tui/assets/themes/: theme-catppuccin_latte.toml  theme-catppuccin_mocha.toml  theme-dracula.toml  theme-gruvbox_dark.toml  theme-gruvbox_light.toml  theme-monokai.toml  theme-nord.toml  theme-solarized_dark.toml  theme-solarized_light.toml
crates/regenerator2000-tui/src/: events.rs  lib.rs  theme.rs  theme_file.rs  ui.rs  ui_state.rs  utils.rs
crates/regenerator2000-tui/src/events/: input.rs
crates/regenerator2000-tui/src/ui/: dialog_about.rs  dialog_apply_enum.rs  dialog_bookmarks.rs  dialog_comment.rs  dialog_complete_address.rs  dialog_confirmation.rs  dialog_crt_picker.rs  dialog_d64_picker.rs  dialog_document_settings.rs  dialog_edit_enum.rs  dialog_export_as.rs  dialog_export_labels.rs  dialog_file_info.rs  dialog_find_references.rs  dialog_go_to_symbol.rs  dialog_import_context.rs  dialog_jump_to_address.rs  dialog_jump_to_line.rs  dialog_keyboard_shortcut.rs  dialog_label.rs  dialog_manage_enums.rs  dialog_memory_dump_address.rs  dialog_open.rs  dialog_save_as.rs  dialog_search.rs  dialog_settings.rs  dialog_t64_picker.rs  dialog_unpack.rs  dialog_vice_connect.rs  dialog_warning.rs  minimap_bar.rs  navigable.rs  statusbar.rs  view_bitmap.rs  view_blocks.rs  view_charset.rs  view_debugger.rs  view_disassembly.rs  view_hexdump.rs  view_sprites.rs  (+1 more)
crates/regenerator2000-tui/src/ui/menu/: menu_action.rs  menu_model.rs
docs/: analysis.md  architecture.md  assemblers.md  blocks.md  debugger.md  enums.md  examples.md  faq.md  graphics_module.md  index.md  install.md  keyboard_shortcuts.md  mcp.md  platforms.md  requirements.md  requirements.txt  settings.md  systems.md  themes.md  tutorial.md  unpacker.md  user_guide.md  views.md
examples/: burnin_rubber.regen2000proj  c128_hero_is_back.regen2000proj  c64_burnin_rubber.html  c64_burnin_rubber.regen2000proj  c64_burnin_rubber_2000.html  c64_burnin_rubber_3000.html  c64_burnin_rubber_5800.html  c64_burnin_rubber_tape_loader.regen2000proj  c64_moving_tubes_lxt.asm  c64_moving_tubes_lxt.regen2000proj  frogger.crt  frogger.regen2000proj  pet_loderunner.regen2000proj  plus4_kikstart_8192.regen2000proj  vic20_omega_race_cart_generic_a000.regen2000proj
src/: analyzer.rs  assets.rs  commands.rs  config.rs  cpu.rs  crt.rs  cursor_persistence_test.rs  dialog_comment.rs  dialog_confirmation.rs  dialog_document_settings.rs  dialog_export_as.rs  dialog_jump_to_line.rs  dialog_keyboard_shortcut.rs  dialog_label.rs  dialog_open.rs  dialog_origin.rs  disassembler.rs  events.rs  exporter.rs  exporter_test_append.rs  lib.rs  load_project_test.rs  main.rs  menu.rs  navigation.rs  parser.rs  repro_test.rs  state.rs  statusbar.rs  (+12 more)
(+338 files in other folders)
