[workspace]
members = [".", "crates/regenerator-core", "crates/regenerator-tui"]
resolver = "3"

[package]
authors = ["Ricardo Quesada <ricardoquesada@gmail.com>"]
description = "An interactive disassembler for the CPU 6502, focused mostly on Commodore 8-bit computers."
name = "regenerator2000"
version = "0.9.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricardoquesada/regenerator2000"
homepage = "https://github.com/ricardoquesada/regenerator2000"

[dependencies]
regenerator-core = { version = "0.9.1", path = "crates/regenerator-core", features = ["mcp"] }
regenerator-tui = { version = "0.9.1", path = "crates/regenerator-tui" }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
ratatui = "0.30.0"
crossterm = "0.29"
base64 = "0.22.1"
log = "0.4.29"
simplelog = "0.12.2"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "net", "macros"] }

[build-dependencies]
anyhow = "1.0"
vergen = "9.1.0"
vergen-gitcl = "9.1.0"

[lints.clippy]
# Stability: flag panic-inducing patterns during development
unwrap_used = "warn"
panic = "warn"
expect_used = "warn"
