[package]
name = "regenerator2000-core"
version = "0.9.11"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricardoquesada/regenerator2000"
description = "Core library for Regenerator 2000: state, disassembler, analyzer, commands, parsers, and exporter for 6502/Commodore binaries."

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
flate2 = "1.1"
directories = "6.0.0"
regex = "1.12"
log = "0.4.29"
include_dir = "0.7"

# MCP Dependencies (optional)
tokio = { version = "1.52", features = ["rt-multi-thread", "sync", "net", "macros"], optional = true }
rmcp = { version = "1.5.0", features = ["server", "transport-streamable-http-server"], optional = true }
axum = { version = "0.8.9", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"], optional = true }

[features]
default = []
mcp = ["dep:tokio", "dep:rmcp", "dep:axum", "dep:reqwest"]

[lints]
workspace = true
