[package]
name = "regenerator2000-tui"
version = "0.9.12"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricardoquesada/regenerator2000"
description = "Terminal User Interface (TUI) for Regenerator 2000 using ratatui."

[dependencies]
regenerator2000-core = { version = "0.9.12", path = "../regenerator2000-core", features = ["mcp"] }
ratatui = "0.30.0"
crossterm = "0.29"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false }
ratatui-textarea = "0.9.1"
opener = "0.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
directories = "6"
log = "0.4"

[lints]
workspace = true
