[package]
name = "regenerator2000-tui"
version = "0.9.19"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ricardoquesada/regenerator2000"
homepage = "https://regenerator2000.readthedocs.io/"
documentation = "https://regenerator2000.readthedocs.io/"
description = "Terminal User Interface (TUI) for Regenerator 2000 using ratatui."

[dependencies]
regenerator2000-core = { version = "0.9.19", path = "../regenerator2000-core", features = ["mcp"] }
ratatui = "0.30.0"
crossterm = "0.29"
ratatui-image = { version = "11.0", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false }
ratatui-textarea = "0.9.1"
opener = "0.8"
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
directories = "6"
log = "0.4"
include_dir = "0.7"
tokio = { version = "1.52", features = ["rt-multi-thread", "sync"] }

[lints]
workspace = true
